<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="loginViewModel"
            type="com.example.taskcontroler.presentation.login.LoginViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">
        <RelativeLayout
            android:background="@drawable/header_trapeze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/ic_logo"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:paddingBottom="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
        <androidx.cardview.widget.CardView
            app:cardCornerRadius="@dimen/_20sdp"
            android:layout_marginTop="190dp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:layout_marginHorizontal="45dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/backgroundLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:lottie_fileName="background_cube.json"
                    android:scaleType="centerCrop"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="false"
                    />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:paddingBottom="@dimen/_15sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingRight="@dimen/_15sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/listof"
                            android:text="@string/mode_of"
                            android:textColor="@color/colorAccent"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:textSize="@dimen/_15sdp"
                            android:layout_marginTop="@dimen/_15sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/selectProjectTittle"
                            android:text="@string/login"
                            android:textSize="@dimen/_30sdp"
                            android:fontFamily="@font/nunito_sans_bold"
                            android:textColor="@color/blackBlue"
                            android:layout_marginTop="@dimen/_25sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <Button
                        android:onClick="@{()->loginViewModel.singInGoogle()}"
                        android:text="@string/login_google"
                        android:fontFamily="@font/nunito_sans_light"
                        android:textColor="@color/whiteBlue"
                        android:textAllCaps="false"
                        android:drawableStart="@drawable/googleg_disabled_color_18"
                        android:drawableTint="@color/whiteBlue"
                        android:background="@drawable/button_blue_black"
                        android:paddingLeft="@dimen/_15sdp"
                        android:paddingRight="@dimen/_20sdp"
                        android:layout_margin="@dimen/_15sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_10sdp"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:textAlignment="center"
                        android:text="@string/you_dont_have_internet"/>

                    <Button
                        android:id="@+id/withoutInternetButton"
                        android:text="@string/use_without_internet"
                        android:fontFamily="@font/nunito_sans_bold"
                        android:textColor="@color/blackBlue"
                        android:textAllCaps="false"
                        android:background="@drawable/button_border_black_blue"
                        android:paddingLeft="@dimen/_20sdp"
                        android:paddingRight="@dimen/_20sdp"
                        android:layout_margin="@dimen/_15sdp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</layout>